Fix report export errors and redesign inventory UI to professional standards

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,19 @@
 {
     "version": 2,
+    "cleanUrls": true,
     "rewrites": [
         {
             "source": "/api/(.*)",
             "destination": "/api/index.js"
         },
         {
-            "source": "/(.*)",
-            "destination": "/frontend/dist/$1"
+            "source": "/((?!api/).*)",
+            "destination": "/frontend/dist/$1",
+            "continue": true
+        },
+        {
+            "source": "/((?!api/).*)",
+            "destination": "/frontend/dist/index.html"
         }
     ],
     "builds": [
