--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 node_modules/
-.env
+.env*
 dist/
 build/
 .vercel
 .DS_Store
 *.log
-backend/node_modules/
-frontend/node_modules/
-frontend/dist/
+.vite/
+**/node_modules/
+**/dist/
+**/build/
