Fix 404 deployment error: Corrected static asset paths in vercel.json and pinned Vite version

--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,11 @@
         },
         {
             "source": "/((?!api/).*)",
-            "destination": "/frontend/dist/$1"
+            "destination": "/frontend/$1"
         },
         {
             "source": "/((?!api/).*)",
-            "destination": "/frontend/dist/index.html"
+            "destination": "/frontend/index.html"
         }
     ],
     "builds": [
