--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^6.0.0",
+    "vite": "6.1.0",
     "rollup": "^4.20.0"
   }
 }
