--- a/api/package.json
+++ b/api/package.json
@@ -1,15 +1,14 @@
 {
-    "name": "techy-pos-api",
+    "name": "@techypos/api",
     "version": "1.0.0",
-    "description": "Vercel API Entry Point",
-    "main": "index.js",
+    "private": true,
     "dependencies": {
+        "express": "^4.18.2",
         "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
         "express-validator": "^7.0.1",
         "helmet": "^7.1.0",
