fix: Resolve 404 errors on page reload in Vercel by fixing SPA routing configuration
- Removed 'check: true' flag that was causing 404s on direct URL access
- Added explicit routes for static assets (js, css, images, fonts)
- Ensured all non-API routes fall back to index.html for client-side routing
- Fixed issue where reloading pages like /jobs or /inventory would show 404

--- a/vercel.json
+++ b/vercel.json
@@ -19,9 +19,12 @@
             "dest": "/api/index.js"
         },
         {
-            "src": "/(.*)",
-            "dest": "/frontend/$1",
-            "check": true
+            "src": "/assets/(.*)",
+            "dest": "/frontend/assets/$1"
+        },
+        {
+            "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|json|woff|woff2|ttf|eot))",
+            "dest": "/frontend/$1"
         },
         {
             "src": "/(.*)",
