--- a/vercel.json
+++ b/vercel.json
@@ -19,19 +19,11 @@
             "dest": "/api/index.js"
         },
         {
-            "src": "/assets/(.*)",
-            "dest": "/frontend/dist/assets/$1"
-        },
-        {
-            "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|json|woff|woff2|ttf|eot))",
-            "dest": "/frontend/dist/$1"
-        },
-        {
             "handle": "filesystem"
         },
         {
             "src": "/(.*)",
-            "dest": "/frontend/dist/index.html"
+            "dest": "/index.html"
         }
     ]
 }
